syntax = "proto3";
package ecommerce;

option go_package = "./api";

service ClubsInfo {
  rpc getClubs(Club) returns (ClubsName);
  rpc getShedule(ClubUrl) returns (Shedule);
}

message ClubUrl {
  string value = 1;
}

message ClubsName {
  map<string, string> clubsName = 1;
}

message Shedule {
  map<string, string> shedule = 1;
}

message Club {
}